[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dexterous-hand"
version = "0.1.0"
description = "Vendor-neutral Python and ROS 2 SDK for dexterous robotic hands."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Stonedrum Robotics", email = "info@stonedrum.co" }]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pyserial>=3.5",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "mypy>=1.8",
]

[tool.setuptools.packages.find]
include = ["dexterous_hand*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
