<?xml version="1.0"?>
<package format="3">
  <name>dexterous_hand_ros2</name>
  <version>0.1.0</version>
  <description>ROS 2 nodes for the dexterous hand SDK.</description>
  <maintainer email="info@stonedrum.co">Stonedrum Robotics</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>python3-numpy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
